[package]
name = "survivors-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
bevy = { version = "0.11.3", features = ["dynamic_linking"] }
#bevy = "0.11.3"
bevy_ecs_ldtk = "0.8.0"
bevy_ecs_ldtk_macros = "0.8.0"
bevy_rapier2d = "0.22.0"
bevy_turborand = "0.6.0"

[features]
default = ["bevy/bevy_sprite", "bevy_ecs_ldtk/atlas", "bevy_ecs_ldtk/render"]

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

