[package]
name = "survivors-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
bevy = { version = "0.11", features = ["dynamic_linking"] }
#bevy = "0.11.3"
bevy_ecs_ldtk = { version = "0.8", features = ["atlas", "render"] }
bevy_ecs_ldtk_macros = "0.8"
bevy-inspector-egui = "0.19"
bevy_rapier2d = "0.22"
bevy_turborand = "0.6"

[features]
default = [ ]

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

