[package]
name = "survivors-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
bevy = { version = "0.11", features = ["dynamic_linking"] }
bevy_ecs_tilemap = "0.11"
bevy-inspector-egui = "0.19"
bevy_rapier2d = "0.22"
bevy_turborand = "0.6"
log = "0.4"
anyhow = "1.0"
ldtk_rust = { version = "0.6" }
rand = "0.8"
env_logger = "0.10"
serde_json = { version = "1.0" }
tiled = { version = "0.11" }

[features]
default = ["bevy/bevy_sprite"]
atlas = ["bevy_ecs_tilemap/atlas"]

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

